# freeman-repo

./: .gitignore  README.md
conv-nets/: INSTRUCTIONS_CONVNETS.md  README.md  cifar10_challenge.py  mnist_test.py  mnist_weights.h5  mnist_weights.h5py  requirements.txt
face-warp/: .gitignore  README.md  face-warp.py  requirements.txt
image-flop/: CMakeLists.txt  INSTRUCTIONS_IMAGEFLOP.md  README.md  resources.qrc
image-flop/include/: imageprocessor.h
image-flop/qml/: FilterDialog.qml  FilterModel.qml  MainContent.qml  MainMenuBar.qml  ScaleRotateDialog.qml  image-flop.qml
image-flop/src/: imageprocessor.cpp  main.cpp  mat_and_qimage.cpp
imdb-scraper/: README.md  imdb-scraper.py  main.qml  requirements.txt
picam-capture/: README.md  gui-capture.py  picapture.py
process-eye/: CMakeLists.txt  INSTRUCTIONS_PROCESSEYE.md  process-eye.cpp  requirements.txt  resources.qrc
process-eye/include/: imageprocessing.h  mat_and_qimage.hpp
process-eye/qml/: MainContent.qml  process-eye.qml
process-eye/src/: imageprocessing.cpp  main.cpp
scripts/: sex_dice.py  sex_tape.py
sex-dice/: GIFImage.py  INSTRUCTIONS_SEXDICE.md  README.md  build.bat  requirements.txt  sex_dice.py
stock-analysis/: .gitignore  README.md  requirements.txt  stock-analysis.py  tickers.yaml
